--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,3 +1,8 @@
 $primary_color: #242424;
 $secondary_color: #595959;
 $white: #efefef;
+
+::selection {
+  background-color: $secondary_color;
+  color: $white;
+}
