--- a/style.scss
+++ b/style.scss
@@ -41,7 +41,8 @@ a {
 }
 
 aside {
-  height: 100%;
+  height: 100vh;
+  position: fixed;
 
   nav {
     border-right: 1px solid $secondary_color;
@@ -53,7 +54,7 @@ aside {
     width: 50px;
   }
   .menu_btn {
-    width: 100%;
+    width: 50px;
     background-color: $secondary_color;
     display: flex;
     flex-direction: column;
@@ -89,7 +90,7 @@ aside {
 main {
   width: calc(100% - 50px);
   padding: 3rem 4rem;
-  padding-left: 8rem;
+  padding-left: 14rem;
   display: flex;
   flex-direction: column;
 }
@@ -143,6 +144,8 @@ header {
   align-items: flex-start;
   justify-content: space-between;
   margin: 4rem 0;
+  margin-right: 1rem;
+
   .product_info {
     display: flex;
     flex-direction: column;
@@ -153,7 +156,7 @@ header {
       font-size: 5rem;
       font-family: Georgia, "Times New Roman", Times, serif;
       font-weight: 500;
-      max-width: 80%;
+      width: 80%;
       text-transform: uppercase;
       .underline {
         width: 50px;
@@ -173,7 +176,8 @@ header {
       margin-bottom: 2rem;
       display: flex;
       align-items: center;
-      width: 50%;
+      width: clamp(45ch, 50%, 75ch);
+      justify-content: space-between;
       h3 {
         font-size: 2rem;
         display: flex;
@@ -184,7 +188,6 @@ header {
           font-weight: 200;
         }
       }
-      justify-content: space-between;
       & > span:nth-child(2) {
         text-decoration: line-through;
       }
@@ -246,6 +249,94 @@ header {
     &:focus {
       background-color: $white;
       color: $secondary_color;
+    }
+  }
+}
+
+@include large {
+  aside {
+    width: 100vw;
+    height: 50px;
+    background-color: $primary_color;
+    position: fixed;
+    z-index: 3;
+    nav {
+      flex-direction: row;
+      width: 100%;
+      border-bottom: 1px solid $secondary_color;
+
+      .socials {
+        display: flex;
+        flex-direction: row;
+        .nav_social {
+          margin-right: 20px;
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  main {
+    width: 100%;
+    padding: 6rem 3rem;
+  }
+  header {
+    .navbar {
+      display: none;
+    }
+  }
+  footer {
+    padding-bottom: 2rem;
+  }
+  .single_product {
+    margin: 4rem 0 2rem 0;
+  }
+}
+
+@include medium {
+  .single_product {
+    flex-direction: column;
+    .product_info {
+      h1 {
+        font-size: 3rem;
+      }
+      .product_about {
+        width: 100%;
+        text-align: justify;
+      }
+      .product_prices {
+        width: 60%;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        margin-bottom: 1rem;
+        h3 {
+          margin-bottom: 2rem;
+        }
+      }
+      .add_to_cart {
+        margin-bottom: 1rem;
+      }
+    }
+
+    .image_review {
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      img {
+        height: 200px;
+        margin-bottom: 2rem;
+      }
+      .watch_review {
+        flex-direction: row;
+        justify-content: space-between;
+        h2 {
+          font-size: 2rem;
+        }
+        > * {
+          margin: 0 2rem;
+        }
+      }
     }
   }
 }
